--- a/Challenge/index.html
+++ b/Challenge/index.html
@@ -10,11 +10,11 @@
 </head>
 
 <body>
-
+  
   <div class="container">
     <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
+      <div class="col-md-12 jumbotron text-center" style="background-image: url(https://faculty.mdanderson.org/content/dam/mdanderson/images/publications/cancerwise/G/iStock-513254018_chalkfigure.jpg.resize.jpg); background-size: 100%;">
+        <h1 class="text-white">Belly Button Biodiversity Dashboard</h1>
         <p>Use the interactive charts below to explore the dataset</p>
       </div>
     </div>
@@ -52,6 +52,12 @@
   <script src="charts.js"></script>
   <!-- <script src="plots.js"></script> -->
   
+	
+
+
+
+
+
 
 </body>
 
